// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletedFoo render 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
    >
      Name
      <div
        className="dd form-control"
      >
        <input
          className="dd text-body1 input"
          onChange={[Function]}
          type="text"
          value="Hello"
        />
      </div>
    </label>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
    >
      title
      <div
        className="dd form-control"
      >
        <input
          className="dd text-body1 input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </label>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`FullFoo render 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
    >
      Name
      <div
        className="dd form-control"
      >
        <input
          className="dd text-body1 input"
          onChange={[Function]}
          type="text"
          value="Hello"
        />
      </div>
    </label>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
    >
      title
      <div
        className="dd form-control"
      >
        <input
          className="dd text-body1 input"
          onChange={[Function]}
          type="text"
          value="Hello"
        />
      </div>
    </label>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`NewFoo render 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
    >
      Name
      <div
        className="dd form-control"
      >
        <input
          className="dd text-body1 input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </label>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
    >
      title
      <div
        className="dd form-control"
      >
        <input
          className="dd text-body1 input"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </label>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={true}
    type="submit"
    value="Save"
  />
</form>
`;
